--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,56 +1,58 @@
 /* light mode */
-.light > *{
-    background-color: var(--background-color) !important;
-    color: var(--text-color) !important;
+.light > * {
+  background-color: var(--background-color) !important;
+  color: var(--text-color) !important;
 }
 
-.light > #footer-socialNetworks-github-svg-path{
-    fill: none;
+.light > #footer-socialNetworks-github-svg-path {
+  fill: none;
 }
 
 /* dark mode */
 .dark {
-    --background-color: var(--background-color-dark) !important;
-    --secondary-background-color: var(--secondary-background-color-dark) !important;
-    --text-color: var(--text-color-dark) !important;
-    --text-secondary-color: var(--text-secondary-color-dark) !important;
-    --text-link-color: var(--text-link-color-dark) !important;
-    --primary-color: var(--primary-color-dark);
-    --secondary-color: var(--secondary-color-dark);
+  --background-color: var(--background-color-dark) !important;
+  --secondary-background-color: var(
+    --secondary-background-color-dark
+  ) !important;
+  --text-color: var(--text-color-dark) !important;
+  --text-secondary-color: var(--text-secondary-color-dark) !important;
+  --text-link-color: var(--text-link-color-dark) !important;
+  --primary-color: var(--primary-color-dark);
+  --secondary-color: var(--secondary-color-dark);
 }
 
-.dark #footer-socialNetworks-github-svg-path{
-    fill: #FFFFFF;
+.dark #footer-socialNetworks-github-svg-path {
+  fill: #ffffff;
 }
 
 .text-secondary {
-    color: var(--text-secondary-color) !important;
+  color: var(--text-secondary-color) !important;
 }
 
 #theme-toggle:focus {
-    outline: 0;
+  outline: 0;
 }
 
 #theme-toggle svg {
-    height: 18px;
+  height: 18px;
 }
 
 button#theme-toggle {
-    border: none;
-    font-size: 26px;
-    margin: auto 4px;
+  border: none;
+  font-size: 26px;
+  margin: auto 4px;
 }
 
 body.dark #moon {
-    vertical-align: middle;
-    display: none;
+  vertical-align: middle;
+  display: none;
 }
 
 body:not(.dark) #sun {
-    display: none;
+  display: none;
 }
 
 body *::selection {
-    color: var(--text-color) !important;
-    background-color: var(--primary-color) !important;
+  color: var(--text-color) !important;
+  background-color: var(--primary-color) !important;
 }
