--- a/themes/hugo-profile/layouts/_default/baseof.html
+++ b/themes/hugo-profile/layouts/_default/baseof.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language.Lang }}">
-  <head>
-    {{- partial "head.html" . -}} {{- block "head" . }} {{- end }}
 
-    <!-- Custom Styles -->
-    {{ if .Site.Params.customCSS }}
-    <link rel="stylesheet" href="{{ .Site.Params.staticPath }}/style.css" />
-    {{ end }}
+<head>
+  {{- partial "head.html" . -}} {{- block "head" . }} {{- end }}
 
-    <title>{{- block "title" . }} {{- end }}</title>
-  </head>
+  <!-- Custom Styles -->
+  {{ if .Site.Params.customCSS }}
+  <link rel="stylesheet" href="{{ .Site.Params.staticPath }}/style.css" />
+  {{ end }}
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-  <body class="light">
-    <!-- javascripts -->
-    <!-- <script src="/js/jquery-3.6.0.min.js"></script> -->
+  <title>{{- block "title" . }} {{- end }}</title>
+</head>
 
-    {{- partial "sections/header.html" . -}}
-    <div id="content">{{- block "main" . }}{{- end }}</div>
-    {{- partial "sections/footer/index.html" . -}} {{- if (or (eq
-    .Site.Params.UseBootstrapCDN true) (eq .Site.Params.UseBootstrapCDN "js"))
-    -}}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"
-    ></script>
-    {{- else -}}
-    <script src="{{ .Site.Params.staticPath }}/bootstrap-5/js/bootstrap.bundle.min.js"></script>
-    {{- end -}} {{- partial "scripts.html" . -}}
+<body class="light">
+  <!-- javascripts -->
+  <!-- <script src="/js/jquery-3.6.0.min.js"></script> -->
 
-    <!-- for search -->
-    <section id="search-content" class="py-2">
-      <div class="container" id="search-results"></div>
-    </section>
-    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+  {{- partial "sections/header.html" . -}}
+  <div id="content">{{- block "main" . }}{{- end }}</div>
+  {{- partial "sections/footer/index.html" . -}} {{- if (or (eq
+  .Site.Params.UseBootstrapCDN true) (eq .Site.Params.UseBootstrapCDN "js"))
+  -}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+  {{- else -}}
+  <script src="{{ .Site.Params.staticPath }}/bootstrap-5/js/bootstrap.bundle.min.js"></script>
+  {{- end -}} {{- partial "scripts.html" . -}}
+
+  <!-- for search -->
+  <section id="search-content" class="py-2">
+    <div class="container" id="search-results"></div>
+  </section>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 800,
+      once: false,
+      offset: 100
+    });</script>
+</body>
+
 </html>
