--- a/themes/hugo-profile/layouts/partials/sections/projects.html
+++ b/themes/hugo-profile/layouts/partials/sections/projects.html
@@ -1,27 +1,34 @@
 {{ if .Site.Params.projects.enable | default false }}
 <section id="projects" class="py-5">
     <div class="container">
-        <h3 class="text-center">{{ .Site.Params.projects.title | default "Projects" }}</h3>
+        <h3 class="text-center" data-aos="fade-up" data-aos-duration="800">{{ .Site.Params.projects.title | default
+            "Projects" }}</h3>
         <div class="row justify-content-center px-3 px-md-5">
-            {{ range .Site.Params.projects.items }}
-            <div class="col-lg-4 col-md-6 my-3">
+            {{ range $index, $project := .Site.Params.projects.items }}
+            <div class="col-lg-4 col-md-6 my-3" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="{{ mul $index 100 }}">
                 <div class="card my-3 h-100" title="{{ .title }}">
                     <div class="card-head">
-                        <img class="card-img-top" src="{{ .image }}" alt="{{ .title }}">
+                        <img class="card-img-top" src="{{ .image }}" alt="{{ .title }}" data-aos="zoom-in"
+                            data-aos-duration="600" data-aos-delay="{{ add (mul $index 100) 200 }}">
                     </div>
                     <div class="card-body bg-transparent p-3">
-                        <div class="pb-2 bg-transparent">
+                        <div class="pb-2 bg-transparent" data-aos="fade-right" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $index 100) 300 }}">
                             {{ range .badges }}
                             <span class="badge badge-secondary">{{ . }}</span>
                             {{ end }}
                         </div>
-                        <h5 class="card-title bg-transparent mt-1">{{ .title }}</h5>
-                        <div class="card-text bg-transparent secondary-font">
+                        <h5 class="card-title bg-transparent mt-1" data-aos="fade-up" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $index 100) 400 }}">{{ .title }}</h5>
+                        <div class="card-text bg-transparent secondary-font" data-aos="fade-up" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $index 100) 500 }}">
                             {{ .content }}
                         </div>
                     </div>
                     {{ if or (.links) (.featured) }}
-                    <div class="card-footer py-3">
+                    <div class="card-footer py-3" data-aos="fade-up" data-aos-duration="600"
+                        data-aos-delay="{{ add (mul $index 100) 600 }}">
                         {{ range .links }}
                         <span class="m-1 mx-2">
                             <a href="{{ .url }}" target="_blank">
@@ -41,25 +48,32 @@
                 </div>
             </div>
             {{ end }}
-            {{ range ( where .Site.RegularPages "Type" "projects" ) }}
+            {{ range $index, $page := ( where .Site.RegularPages "Type" "projects" ) }}
             {{ if .Params.showInHome | default true }}
-            <div class="col-lg-4 col-md-6 my-3">
+            {{ $cardIndex := add (len $.Site.Params.projects.items) $index }}
+            <div class="col-lg-4 col-md-6 my-3" data-aos="fade-up" data-aos-duration="800"
+                data-aos-delay="{{ mul $cardIndex 100 }}">
                 <div class="card my-3 h-100" title="{{ .Title }}">
                     <div class="card-head">
-                        <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .Title }}">
+                        <img class="card-img-top" src="{{ .Params.image }}" alt="{{ .Title }}" data-aos="zoom-in"
+                            data-aos-duration="600" data-aos-delay="{{ add (mul $cardIndex 100) 200 }}">
                     </div>
                     <div class="card-body bg-transparent p-3">
-                        <div class="pb-2 bg-transparent">
+                        <div class="pb-2 bg-transparent" data-aos="fade-right" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $cardIndex 100) 300 }}">
                             {{ range .Params.badges }}
                             <span class="badge badge-secondary">{{ . }}</span>
                             {{ end }}
                         </div>
-                        <h5 class="card-title bg-transparent">{{ .Title | truncate 50 }}</h5>
-                        <div class="card-text bg-transparent secondary-font">
+                        <h5 class="card-title bg-transparent" data-aos="fade-up" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $cardIndex 100) 400 }}">{{ .Title | truncate 50 }}</h5>
+                        <div class="card-text bg-transparent secondary-font" data-aos="fade-up" data-aos-duration="600"
+                            data-aos-delay="{{ add (mul $cardIndex 100) 500 }}">
                             {{ .Summary | truncate 100 | safeHTML }}
                         </div>
                     </div>
-                    <div class="card-footer py-3">
+                    <div class="card-footer py-3" data-aos="fade-up" data-aos-duration="600"
+                        data-aos-delay="{{ add (mul $cardIndex 100) 600 }}">
                         {{ range .Params.links }}
                         <span class="m-1 mx-2">
                             <a href="{{ .url }}">
