--- a/themes/hugo-profile/layouts/partials/head/extensions.html
+++ b/themes/hugo-profile/layouts/partials/head/extensions.html
@@ -7,6 +7,10 @@ appear in
 
   <head>
     . */}}
+    <link rel="manifest" href="/john_hugo/manifest.json">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       /* Navbar transparency customization 
