migrate from Site.Params to Site.data about.yaml migrated

--- a/themes/hugo-profile/layouts/partials/sections/footer/copyright.html
+++ b/themes/hugo-profile/layouts/partials/sections/footer/copyright.html
@@ -1,26 +1,31 @@
 <div class="container py-4">
-    <div class="row justify-content-center">
-        <div class="col-md-4 text-center">
-            {{ if or .Site.Params.navbar.brandLogo .Site.Params.favicon }}
-            <div class="pb-2">
-                <a href="{{ .Site.BaseURL }}" title="{{ .Site.Title }}">
-                    <img alt="Footer logo" src="{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}"
-                        height="40px" width="40px">
-                </a>
-            </div>
-            {{ end }}
-            &copy; {{ now.Format "2006"}} {{ .Site.Params.copyright }} {{ .Site.Params.terms.copyright | default
-            "All Rights Reserved" }}
-            <div class="text-secondary">
-                Made with
-                <span class="text-danger">
-                    &#10084;
-                </span>
-                by
-                <a href="https://github.com/gurusabarish/hugo-profile" target="_blank" title="Modified by BugSlayer">
-                    Van_Go
-                </a>
-            </div>
-        </div>
+  <div class="row justify-content-center">
+    <div class="col-md-4 text-center">
+      {{ if or .Site.Params.navbar.brandLogo .Site.Params.favicon }}
+      <div class="pb-2">
+        <a href="{{ .Site.BaseURL }}" title="{{ .Site.Title }}">
+          <img
+            alt="Footer logo"
+            src="{{ .Site.Params.navbar.brandLogo | default .Site.Params.favicon }}"
+            height="40px"
+            width="40px"
+          />
+        </a>
+      </div>
+      {{ end }} &copy; {{ now.Format "2006"}} {{ .Site.Params.copyright }} {{
+      .Site.Params.terms.copyright | default "All Rights Reserved" }}
+      <div class="text-secondary">
+        Made with
+        <span class="text-danger"> &#10084; </span>
+        by
+        <a
+          href="https://vangotek.github.io/john_hugo/"
+          target="_blank"
+          title="Modified by BugSlayer"
+        >
+          Van_Go
+        </a>
+      </div>
     </div>
+  </div>
 </div>
