--- a/themes/hugo-profile/layouts/partials/sections/header.html
+++ b/themes/hugo-profile/layouts/partials/sections/header.html
@@ -86,7 +86,7 @@
                         </li>
                     {{ end }}
 
-                    {{ if and (.Site.Params.about.enable | default false) (not (.Site.Params.navbar.menus.disableAbout | default false)) }}
+                    {{ if and (.Site.Data.about.enable | default false) (not (.Site.Data.navbar.menus.disableAbout | default false)) }}
                     <li class="nav-item navbar-text">
                         <a class="nav-link" href="{{ .Site.BaseURL | relURL }}#about" aria-label="about">
                             {{ .Site.Params.about.title | default "About" }}
