--- a/themes/hugo-profile/layouts/_default/single.html
+++ b/themes/hugo-profile/layouts/_default/single.html
@@ -1,16 +1,14 @@
 {{ define "head" }}
-<meta name="description" content="{{ .Params.description }}">
-<link rel="stylesheet" href="{{.Site.Params.staticPath}}/css/single.css">
+<meta name="description" content="{{ .Params.description }}" />
+<link rel="stylesheet" href="{{.Site.Params.staticPath}}/css/single.css" />
 
 <!-- fontawesome -->
-<script defer src="{{.Site.Params.staticPath}}/fontawesome-6/all-6.4.2.js"></script>
-{{ end }}
-
-{{ define "title" }}
-{{.Title }} | {{ .Site.Title }}
-{{ end }}
-
-{{ define "main" }}
+<script
+  defer
+  src="{{.Site.Params.staticPath}}/fontawesome-6/all-6.4.2.js"
+></script>
+{{ end }} {{ define "title" }} {{.Title }} | {{ .Site.Title }} {{ end }} {{
+define "main" }}
 <section id="single">
   <div class="container">
     <div class="row justify-content-center">
@@ -19,77 +17,97 @@
           <div class="title mb-5">
             <h1 class="text-center mb-4">{{ .Title }}</h1>
             <div class="text-center">
-              {{ if .Params.author }}
-                {{ .Params.author }}
-                <small>|</small>
-              {{ end }}
-              {{ .Date.Format (.Site.Params.datesFormat.article | default "Jan 2, 2006") }}
-
-              {{ if or (.Site.Params.singlePages.readTime.enable | default true) (.Params.enableReadingTime) }}
+              {{ if .Params.author }} {{ .Params.author }}
+              <small>|</small>
+              {{ end }} {{ .Date.Format (.Site.Params.datesFormat.article |
+              default "Jan 2, 2006") }} {{ if or
+              (.Site.Params.singlePages.readTime.enable | default true)
+              (.Params.enableReadingTime) }}
               <span id="readingTime">
-                {{ .Site.Params.singlePages.readTime.content | default "min read" }}
+                {{ .Site.Params.singlePages.readTime.content | default "minread"
+                }}
               </span>
               {{ end }}
             </div>
           </div>
           {{ if .Params.image }}
           <div class="featured-image">
-            <img class="img-fluid mx-auto d-block" src="{{ .Params.image }}" alt="{{ .Title }}">
+            <img
+              class="img-fluid mx-auto d-block"
+              src="{{ .Params.image }}"
+              alt="{{ .Title }}"
+            />
           </div>
           {{ end }}
-          <article class="page-content  p-2">
-          {{ .Content | emojify }}
-          </article>
+          <article class="page-content p-2">{{ .Content | emojify }}</article>
         </div>
       </div>
       <div class="col-sm-12 col-md-12 col-lg-3">
         <div id="stickySideBar" class="sticky-sidebar">
           {{ if .Params.toc | default true}}
           <aside class="toc">
-              <h5>
-                {{ .Site.Params.terms.toc | default "Table Of Contents" }}
-              </h5>
-              <div class="toc-content">
-                {{.TableOfContents}}
-              </div>
+            <h5>{{ .Site.Params.terms.toc | default "Table Of Contents" }}</h5>
+            <div class="toc-content">{{.TableOfContents}}</div>
           </aside>
-          {{ end }}
-
-          {{ if .Params.tags }}
+          {{ end }} {{ if .Params.tags }}
           <aside class="tags">
             <h5>{{ .Site.Params.terms.tags | default "Tags" }}</h5>
             <ul class="tags-ul list-unstyled list-inline">
               {{range .Params.tags}}
-              <li class="list-inline-item"><a href="{{`tags` | absURL}}/{{.| urlize}}"
-                {{ if site.Params.singlePages.tags.openInNewTab | default true }}target="_blank"{{ end }}
-              >{{.}}</a></li>
+              <li class="list-inline-item">
+                <a
+                  href="{{`tags` | absURL}}/{{.| urlize}}"
+                  {{
+                  if
+                  site.Params.singlePages.tags.openInNewTab
+                  |
+                  default
+                  true
+                  }}target="_blank"
+                  {{
+                  end
+                  }}
+                  >{{.}}</a
+                >
+              </li>
               {{end}}
             </ul>
           </aside>
-          {{end}}
-
-          {{ if .Params.socialShare | default .Site.Params.singlePages.socialShare | default true }}
+          {{end}} {{ if .Params.socialShare | default
+          .Site.Params.singlePages.socialShare | default true }}
           <aside class="social">
             <h5>{{ .Site.Params.terms.social | default "Social" }}</h5>
             <div class="social-content">
               <ul class="list-inline">
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Site.Params.hostName }}{{ .Permalink | absURL }}">
+                  <a
+                    target="_blank"
+                    href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Site.Params.hostName }}{{ .Permalink | absURL }}"
+                  >
                     <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://twitter.com/share?text={{ .Title }}&url={{ .Site.Params.hostName }}{{ .Permalink | absURL }}">
+                  <a
+                    target="_blank"
+                    href="https://twitter.com/share?text={{ .Title }}&url={{ .Site.Params.hostName }}{{ .Permalink | absURL }}"
+                  >
                     <i class="fab fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href="https://api.whatsapp.com/send?text={{ .Title }}: {{ .Site.Params.hostName }}{{ .Permalink | absURL }}">
+                  <a
+                    target="_blank"
+                    href="https://api.whatsapp.com/send?text={{ .Title }}: {{ .Site.Params.hostName }}{{ .Permalink | absURL }}"
+                  >
                     <i class="fab fa-whatsapp"></i>
                   </a>
                 </li>
                 <li class="list-inline-item text-center">
-                  <a target="_blank" href='mailto:?subject={{ .Title }}&amp;body={{ .Site.Params.terms.emailText | default "Check out this site" }} {{ .Site.Params.hostName }}{{ .Permalink | absURL }}'>
+                  <a
+                    target="_blank"
+                    href='mailto:?subject={{ .Title }}&amp;body={{ .Site.Params.terms.emailText | default "Check out this site" }} {{ .Site.Params.hostName }}{{ .Permalink | absURL }}'
+                  >
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
@@ -111,11 +129,19 @@
   </button>
 </section>
 
-{{ if or (.Site.Params.singlePages.scrollprogress.enable | default true) (.Params.enableScrollProgress) }}
+{{ if or (.Site.Params.singlePages.scrollprogress.enable | default true)
+(.Params.enableScrollProgress) }}
 <div class="progress">
-  <div id="scroll-progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+  <div
+    id="scroll-progress-bar"
+    class="progress-bar"
+    role="progressbar"
+    aria-valuenow="0"
+    aria-valuemin="0"
+    aria-valuemax="100"
+  ></div>
 </div>
-<Script src="{{.Site.Params.staticPath}}/js/scrollProgressBar.js"></script>
+<script src="{{.Site.Params.staticPath}}/js/scrollProgressBar.js"></script>
 {{ end }}
 
 <script>
@@ -147,8 +173,7 @@
   }
 </script>
 
-{{ if or (.Site.Params.singlePages.readTime.enable | default true) (.Params.enableReadingTime) }}
+{{ if or (.Site.Params.singlePages.readTime.enable | default true)
+(.Params.enableReadingTime) }}
 <script src="{{.Site.Params.staticPath}}/js/readingTime.js"></script>
-{{end}}
-
-{{ end }}
+{{end}} {{ end }}
